.opsera-february-mail/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: february-mail
  labels:
    app: february-mail
    managed-by: opsera-c2c
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: february-mail
